@@ -52,6 +52,8 @@ wxGTK:
 
 - Fixed problem with choice editor in wxGrid whereby the editor
   lost focus when the combobox menu was shown.
+- Fixed problem trying to print from a preview, whereby wrong printer
+  class was used.
 
 wxMac:
 
